--- a/rule.yml
+++ b/rule.yml
@@ -1,3 +1,3 @@
 drools:
-  myRule: C:\Users\Divya_Intern\Desktop\NewDrool\drool\src\main\resources\rules.xls
+  myRule: https://github.com/divya544/ExcelRule/blob/main/rules.xls
      
