--- a/rule.yml
+++ b/rule.yml
@@ -1,3 +1,3 @@
 drools:
-  myRule: C:\Users\Divya_Intern\Desktop\NewDrool\DroolRuleEngine\drool\src\main\resources\rules.xls
+  myRule: C:\Users\Divya_Intern\Desktop\NewDrool\DroolRuleEngine\drool\src\main\resources\InterestRules.xls
      
